<resources>
    <string name="app_name">tatooine</string>
    <string name="home">Home</string>
    <string name="add_post">Add Post</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tatooine">tatooine</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="submit">Submit</string>
    <string name="enter_time_taken_in_hours">Enter time taken (in hours)</string>
    <string name="time_taken">Time taken:</string>
    <string name="enter_rate_per_hour">Enter rate (per hour)</string>
    <string name="rate">Rate:</string>
    <string name="select_styles">Select styles</string>
    <string name="add_new_post">Add New Post</string>
    <string name="upload_image">Upload Image</string>
    <string name="update_post">Update Post</string>
    <string name="delete">Delete</string>
    <string name="back_button">Back button</string>
</resources>