<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    <data>-->
    <!--        <variable name="clickHandler" type="com.northcoders.recordshopapp.ui.mainactivity.MainActivityClickHandler"/>-->
    <!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.addpost.AddPostActivity">

        <TextView android:id="@+id/mainHeader"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:text="@string/tatooine"
                  android:textColor="@color/white"
                  android:paddingHorizontal="20dp"
                  android:paddingTop="10dp"
                  android:background="@color/material_dynamic_primary20"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"/>

        <TextView android:id="@+id/selectStyleTextView"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingStart="24dp"
                  android:paddingEnd="24dp"
                  android:layout_marginStart="25dp"
                  android:textColorHint="@color/black"
                  android:hint="@string/select_styles"
                  android:background="@drawable/search_view_background"
                  app:layout_constraintTop_toBottomOf="@id/mainHeader"
                  app:layout_constraintBottom_toTopOf="@id/rateLayout"
                  app:layout_constraintStart_toStartOf="parent"/>


        <LinearLayout android:id="@+id/rateLayout"
                      android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:paddingTop="5dp"
                      android:paddingStart="20dp"
                      android:paddingEnd="20dp"
                      android:paddingHorizontal="40dp"
                      android:orientation="horizontal"
                      android:gravity="start"
                      app:layout_constraintTop_toBottomOf="@id/selectStyleTextView"
                      app:layout_constraintBottom_toTopOf="@id/timeTakenLayout">

            <TextView android:id="@+id/rateTextView"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="start"
                      android:paddingStart="5dp"
                      android:paddingEnd="5dp"
                      android:text="@string/rate"/>

            <EditText android:id="@+id/rateEditView"
                      android:inputType="number"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:hint="@string/enter_rate_per_hour"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/timeTakenLayout"
                      android:layout_height="wrap_content"
                      android:layout_width="match_parent"
                      android:paddingTop="5dp"
                      android:paddingHorizontal="40dp"
                      android:paddingStart="20dp"
                      android:paddingEnd="20dp"
                      android:orientation="horizontal"
                      android:gravity="start"
                      app:layout_constraintTop_toBottomOf="@id/rateLayout"
                      app:layout_constraintBottom_toTopOf="@id/submitButton">

            <TextView android:id="@+id/timeTakenTextView"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="start"
                      android:paddingStart="5dp"
                      android:paddingEnd="5dp"
                      android:text="@string/time_taken"/>

            <EditText android:id="@+id/timeTakenEditView"
                      android:inputType="number"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:hint="@string/enter_time_taken_in_hours"/>
        </LinearLayout>

        <Button android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textAlignment="center"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@+id/timeTakenLayout"
                app:layout_constraintBottom_toTopOf="@+id/bottomNavBarView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView android:id="@+id/bottomNavBarView"
                                                                           android:layout_width="match_parent"
                                                                           android:layout_height="wrap_content"
                                                                           android:background="@android:color/transparent"
                                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                                           app:layout_constraintStart_toStartOf="parent"
                                                                           app:layout_constraintEnd_toEndOf="parent"
                                                                           app:menu="@menu/bottom_nav_menu">
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

