<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="post" type="com.northcoders.tatooine.model.Tattoo"/>
        <variable name="clickHandler" type="com.northcoders.tatooine.ui.updatepost.UpdatePostClickHandlers"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.updatepost.UpdatePostActivity">

        <TextView android:id="@+id/updatePostHeader"
                  android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:text="@string/update_post"
                  android:textColor="@color/white"
                  android:paddingHorizontal="20dp"
                  android:paddingTop="10dp"
                  android:background="@color/material_dynamic_primary20"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView android:id="@+id/uploadedImagePreview"
                                                      android:layout_width="match_parent"
                                                      android:layout_height="200dp"
                                                      android:layout_marginTop="40dp"
                                                      android:layout_marginHorizontal="30dp"
                                                      android:background="@drawable/upload_image_view_background"
                                                      app:layout_constraintStart_toStartOf="parent"
                                                      app:layout_constraintEnd_toEndOf="parent"
                                                      app:layout_constraintTop_toBottomOf="@id/updatePostHeader"
                                                      app:layout_constraintBottom_toTopOf="@id/uploadedImagePreview"/>

        <com.google.android.material.button.MaterialButton android:id="@+id/inactiveUploadImageButton"
                                                           android:layout_width="wrap_content"
                                                           android:layout_height="40dp"
                                                           app:cornerRadius="20dp"
                                                           android:elevation="1dp"
                                                           android:paddingLeft="24dp"
                                                           android:paddingRight="24dp"
                                                           android:textAlignment="center"
                                                           android:shadowColor="#000000"
                                                           android:backgroundTint="#827F84"
                                                           android:textColor="#CECBD7"
                                                           android:text="@string/upload_image"
                                                           app:layout_constraintTop_toBottomOf="@+id/uploadedImagePreview"
                                                           app:layout_constraintBottom_toTopOf="@+id/selectStylesLayout"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.textview.MaterialTextView android:id="@+id/selectStylesLayout"
                                                               android:layout_height="40dp"
                                                               android:layout_width="match_parent"
                                                               android:background="@drawable/select_styles_background"
                                                               android:paddingHorizontal="15dp"
                                                               android:paddingVertical="10dp"
                                                               android:layout_marginHorizontal="30dp"
                                                               android:gravity="start"
                                                               android:hint="@string/select_styles"
                                                               android:textColor="@color/black"
                                                               app:layout_constraintTop_toBottomOf="@id/inactiveUploadImageButton"
                                                               app:layout_constraintBottom_toTopOf="@id/rateLayout"
                                                               app:layout_constraintStart_toStartOf="parent">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/rateLayout"
                                                               android:layout_height="wrap_content"
                                                               android:layout_width="match_parent"
                                                               android:paddingHorizontal="30dp"
                                                               android:hint="@string/enter_rate_per_hour"
                                                               app:boxCornerRadiusTopStart="10dp"
                                                               app:boxCornerRadiusBottomStart="10dp"
                                                               app:boxCornerRadiusBottomEnd="10dp"
                                                               app:boxCornerRadiusTopEnd="10dp"
                                                               style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                                                               app:endIconMode="clear_text"
                                                               app:layout_constraintTop_toBottomOf="@+id/selectStylesLayout"
                                                               app:layout_constraintBottom_toTopOf="@id/timeTakenLayout">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/rateEditView"
                                                                     android:text="@={post.price}"
                                                                     android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/timeTakenLayout"
                                                               android:layout_height="wrap_content"
                                                               android:layout_width="match_parent"
                                                               android:paddingHorizontal="30dp"
                                                               android:hint="@string/enter_time_taken_in_hours"
                                                               app:boxCornerRadiusTopStart="10dp"
                                                               app:boxCornerRadiusBottomStart="10dp"
                                                               app:boxCornerRadiusBottomEnd="10dp"
                                                               app:boxCornerRadiusTopEnd="10dp"
                                                               style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                                                               app:endIconMode="clear_text"
                                                               app:layout_constraintTop_toBottomOf="@id/rateLayout"
                                                               app:layout_constraintBottom_toTopOf="@id/submitButton">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/timeTakenEditView"
                                                                     android:text="@={post.hoursWorked}"
                                                                     android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton android:id="@+id/submitButton"
                                                           android:layout_width="wrap_content"
                                                           android:layout_height="40dp"
                                                           android:paddingLeft="24dp"
                                                           android:paddingRight="24dp"
                                                           android:textAlignment="center"
                                                           android:text="@string/submit"
                                                           android:onClick="@{clickHandler::onSubmitButtonClicked}"
                                                           app:layout_constraintTop_toBottomOf="@+id/timeTakenLayout"
                                                           app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton android:id="@+id/deleteButton"
                                                           android:layout_width="wrap_content"
                                                           android:layout_height="40dp"
                                                           android:paddingLeft="24dp"
                                                           android:paddingRight="24dp"
                                                           android:backgroundTint="#F20A0A"
                                                           android:textAlignment="center"
                                                           android:text="@string/delete"
                                                           android:onClick="@{clickHandler::onDeleteButtonClicked}"
                                                           app:layout_constraintTop_toBottomOf="@+id/submitButton"
                                                           app:layout_constraintBottom_toTopOf="@+id/bottomNavBarView"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabBack"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="16dp"
                android:layout_margin="20dp"
                android:src="@drawable/fab_back"
                android:onClick="@{clickHandler::onFabBackButtonClicked}"
                android:contentDescription="@string/back_button"
                app:layout_constraintBottom_toTopOf="@+id/bottomNavBarView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        
        <com.google.android.material.bottomnavigation.BottomNavigationView android:id="@+id/bottomNavBarView"
                                                                           android:layout_width="match_parent"
                                                                           android:layout_height="wrap_content"
                                                                           android:background="@android:color/transparent"
                                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                                           app:layout_constraintStart_toStartOf="parent"
                                                                           app:layout_constraintEnd_toEndOf="parent"
                                                                           app:menu="@menu/bottom_nav_menu">
        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

